add a more robust ssl configuration method

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-POSTGRES_HOST=ep-broad-field-a5yxbopi.us-east-2.aws.neon.tech
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=techtab_owner
-POSTGRES_DB=techtab
-POSTGRES_PASSWORD=npg_Zf2HGhVYX9Cc
+POSTGRES_USER=local_user
+POSTGRES_DB=local_db
+POSTGRES_PASSWORD=local_password
